# SimpleGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Lib/: FlappyBird.cpp  FlappyBird.h  GameObject.h  Window.cpp  Window.h
Lib/Background/: Background.cpp  Background.h
Lib/Bird/: Bird.cpp  Bird.h
Lib/FlappyBird/: FlappyBird.cpp  FlappyBird.h
Lib/Game/: Game.cpp  Game.h
Lib/GameObject/: GameObject.h
Lib/Obstacle/: Obstacle.cpp  Obstacle.h
Lib/ObstacleManager/: ObstacleManager.cpp  ObstacleManager.h
Lib/Pipe/: Pipe.cpp  Pipe.h
Lib/PipeManager/: PipeManager.cpp  PipeManager.h
Lib/Player/: Player.cpp  Player.h
Lib/Window/: Window.cpp  Window.h
